--- a/servicios.html
+++ b/servicios.html
@@ -116,8 +116,8 @@
             <p>Todos los viernes contamos con esta promo para que vos y una amiga puedan realizarse cualquier tratamiento facial o maquillaje. Contactate con nosotras especificando cual servicio vas a reservar! te esperamos en nuestra sucursal.</p>
             <br> 
          
-                <img data-aos="zoom-in-up" src ="../entrega2/img/inicioo.jpg" alt="pestañas" class="foto1" >
-                <img data-aos="zoom-in-up" src="../entrega2/img/inicioo2.jpg" alt="maquillaje" class="foto2">
+                <img data-aos="zoom-in-up" src ="img/inicioo.jpg" alt="pestañas" class="foto1" >
+                <img data-aos="zoom-in-up" src="img/inicioo2.jpg" alt="maquillaje" class="foto2">
         
 </aside>
 
